tests/gabc-dump/should-fail/bad-hepisema.gabc
name: bad horizontal episema;
%%
(c4) g(_)
